w21tuesday/mysolution/jumping.css
.jumping span, #demo span {
    display: inline-block;

    animation-name: jump;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
}

@keyframes jump {
    from {
        transform: translateY(0);
    }
    to {
        transform: translateY(-1em);
    }
}

/* TODO: Avoid there animation-delays and set them with javascript instead
  - every span needs a delay of .05s more than the last */

#demo span:nth-child(1) {
    animation-delay: 0s;
}

#demo span:nth-child(2) {
    animation-delay: .05s;
}

#demo span:nth-child(3) {
    animation-delay: .10s;
}

#demo span:nth-child(4) {
    animation-delay: .15s;
}
#demo span:nth-child(5) {
    animation-delay: .20s;
}
#demo span:nth-child(6) {
    animation-delay: .25s;
}
#demo span:nth-child(7) {
    animation-delay: .30s;
}
#demo span:nth-child(8) {
    animation-delay: .35s;
}
#demo span:nth-child(9) {
    animation-delay: .40s;
}
#demo span:nth-child(10) {
    animation-delay: .45s;
}
#demo span:nth-child(11) {
    animation-delay: .50s;
}
#demo span:nth-child(12) {
    animation-delay: .55s;
}
#demo span:nth-child(13) {
    animation-delay: .60s;
}
#demo span:nth-child(14) {
    animation-delay: .65s;
}

